--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "web-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Weather Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node src/app.js"
   },
   "keywords": [],
   "author": "",
